samples/_failures_safe/1761713452_274ad4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_05d9c8fc.c: In function ‘main’:
./samples/SAFE/__tmp_05d9c8fc.c:169:12: error: missing terminating " character
  169 |     printf("Enter arithmetic expressions (empty line
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_05d9c8fc.c:169:5: error: expected expression at end of input
  169 |     printf("Enter arithmetic expressions (empty line
      |     ^~~~~~
./samples/SAFE/__tmp_05d9c8fc.c:169:5: error: expected declaration or statement at end of input
